ubiquity (16.10.5) UNRELEASED; urgency=medium

  [ Kai-Heng Feng ]
  * ubiquity-dm: Wait until u-s-d xsettings plugin is activated. (LP: #1560162)

  [ David Jordan ]
  * ubiquity/misc.py: set correct target device name for nvme drives.
    (LP: #1600308)

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 25 Jul 2016 12:36:18 -0400

ubiquity (16.10.4) yakkety; urgency=high

  [ Shih-Yuan Lee (FourDollars) ]
  * Some places doesn't have the location information. (LP: #1584417)

  [ Dimitri John Ledkov ]
  * Fix substitution variables syntax from $() -> ${} in
    translations. (LP: #1603926)
  * Automatic update of included source packages: clock-setup
    0.128ubuntu1, partman-base 187ubuntu3, partman-btrfs 21ubuntu1.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Mon, 18 Jul 2016 12:12:43 +0100

ubiquity (16.10.3) yakkety; urgency=medium

  * If mate-settings-daemon is available, use it in preference to
    unity-settings-daemon.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Wed, 22 Jun 2016 17:23:30 -0400

ubiquity (16.10.2) yakkety; urgency=medium

  * scripts/clock-setup-apply: guard against missing rcS file on the rootfs.
    (LP: #1587555)
  * autopilot/ubiquity_autopilot_tests/*: remove unused imports for pyflakes.
  * tests/pyflakes.exclude: update exclusions to remove autopilot entries
    just fixed, and add the full module path to the others.
  * Automatic update of included source packages: apt-setup
    1:0.104ubuntu5, base-installer 1.158ubuntu3, clock-setup
    0.126ubuntu2, console-setup 1.142ubuntu4, netcfg 1.135ubuntu6,
    partconf 1.50, partman-auto-lvm 59ubuntu1, partman-ext3 86ubuntu1,
    partman-lvm 113.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Thu, 09 Jun 2016 10:43:50 -0400

ubiquity (16.10.1) yakkety; urgency=medium

  [ Iain Lane ]
  * misc.py: Ask for the 'State' property instead of 'state'. Fixes display
    of wireless page. (LP: #1572793)

  [ Mathieu Trudel-Lapierre ]
  * Abitrary version number change.