@@ -7,6 +7,10 @@ ubiquity (16.10.5) UNRELEASED; urgency=medium
   * ubiquity/misc.py: set correct target device name for nvme drives.
     (LP: #1600308)
 
+  [ Mathieu Trudel-Lapierre ]
+  * ubi-prepare.py: default to Secure Boot disabled if we install third-party
+    drivers.
+
  -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Mon, 25 Jul 2016 12:36:18 -0400
 
 ubiquity (16.10.4) yakkety; urgency=high
